@@ -7,6 +7,13 @@ Sources
 
 Releases
 {
+  v8r8-pre9
+  {
+    Modules = LHCbDIRAC:v8r8-pre9, LHCbWebDIRAC:v4r3p2
+    Depends = DIRAC:v6r17p20
+    LcgVer = 2017-05-30
+  }
+
   v0r8808
   {
     Modules = LHCbDIRAC:v0r8808, LHCbWebDIRAC:v4r3p2
